samples/_failures_safe/1761419902_4e41e0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b4bc58d9.c: In function ‘main’:
./samples/SAFE/__tmp_b4bc58d9.c:180:17: error: expected ‘;’ at end of input
  180 |         return 1
      |                 ^
      |                 ;
./samples/SAFE/__tmp_b4bc58d9.c:180:9: error: expected declaration or statement at end of input
  180 |         return 1
      |         ^~~~~~
./samples/SAFE/__tmp_b4bc58d9.c:180:9: error: expected declaration or statement at end of input
